SONAR-15345 add CWE top 25 for year 2021